[project]
name = "sql-debug-env"
version = "1.0.0"
description = "OpenEnv-compliant SQL debugging environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "openai>=1.30.1",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "openenv==0.1.13"
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
server = "server.app:main"
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.openenv]
name = "sql-debug-env"
version = "1.0.0"
sdk = "docker"
entry_point = "env.server:app"
tasks = ["syntax_fix", "query_optimize", "logic_bug"]
